fix: allow tab to jump to 'hidden' items

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,4 @@
-body[data-modal-open='true'] {
+body[data-modal-open="true"] {
   overflow: hidden;
 }
 
